--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "dotenv": "^1.1.0"
   },
   "devDependencies": {
+    "browser-sync": "^2.9.3",
     "gulp": "^3.7.0",
     "gulp-jshint": "^1.9.0",
+    "gulp-less": "^3.0.3",
+    "gulp-watch": "^0.6.5",
     "jshint-stylish": "^0.1.3",
-    "gulp-watch": "^0.6.5"
+    "less": "^2.5.1"
   },
   "engines": {
     "node": ">=0.10.22",
     "npm": ">=1.3.14"
   },
   "scripts": {
-    "start": "node keystone.js"
+    "start": "node keystone.js",
+    "dev": "gulp dev"
   },
   "main": "keystone.js"
 }
