Manually install newer version of keystone post deploy

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "npm": ">=1.4.9"
   },
   "scripts": {
-    "start": "node keystone.js"
+    "start": "node keystone.js",
+    "postinstall": "npm i keystonejs/keystone"
   },
   "main": "keystone.js"
 }
